# M4chineOps

./: .gitignore  Makefile  README.md  data.dvc  download_forensics.py  dvc.yaml  preprocess_dataset.py  prova_model.py  pypline changes.txt  pyproject.toml  requirements.txt
.dvc/: config
TAED2_M4chineOps/: README.md  pyproject.toml
TAED2_M4chineOps/deepfake_recognition/: __init__.py  dataset.py
TAED2_M4chineOps/docs/: dataset_card.md
data_processing/: config.py  data_download.py  data_frame_extraction.py  data_preprocessing.py  data_processing_for_VideoMAE.py  data_splitting.py  prepare_ffpp_split.py
data_provisionals/: data_frame_extraction.py  data_sampling.py
deepfake_recognition/: config.py  features.py  ge_validate.py  matadata.py  plots.py  raw_data.py
deepfake_recognition/api/: api.py  app_streamlit.py  schemas.py
deepfake_recognition/data_processing/: data_download.py  data_frame_extraction.py  data_preprocessing_inference.py  data_processing_for_VideoMAE.py  data_sampling_and_metadata.py  embedding_creation.py  npy_to_mp4.py  prepare_ffpp_split.py
docs/: dataset_card.md  mkdocs.yml  model_card.md
emissions/: emissions.csv  read_emissions.ipynb
models/: logreg_model.pkl
notebooks/: model.py
reports/: pylint_report.txt  ruff_changes.txt  ruff_results.txt
src/api/: api.py  (+1 more)
tests/: test_api.py  test_app_streamlit.py  test_config.py  test_data_download.py  test_data_preprocessing_inference.py  test_data_sampling_and_metadata.py  test_dataset_preparation_script.py  test_embedding_creation.py  test_ge_validate.py  test_model_training.py
(+7 files in other folders)
