[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "deepfake_recognition"
version = "0.0.1"
description = "Deepfake Video Detection System"
authors = [
  { name = "Maite Blasi, Martina Massana, Maria Gest\u00ed, Maria Sans" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.10.0"


[tool.ruff]
line-length = 99
src = ["deepfake_recognition"]
include = ["pyproject.toml", "deepfake_recognition/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["deepfake_recognition"]
force-sort-within-sections = true

